<resources>
    <string name="close">Close</string>
    <string name="map_menu_title">Menu</string>
    <string name="menu_report">Report (from knowledge)</string>
    <string name="menu_actualize_one_by_one">Actualize one by one</string>
    <string name="menu_actualize_all">Actualize all</string>
    <string name="menu_autoconfirm">Autoconfirm updates</string>
    <string name="menu_list_armies">List armies</string>
    <string name="menu_actualize_armies_one">Actualize armies one by one</string>
    <string name="menu_actualize_armies_all">Actualize armies (all at once)</string>
    <string name="menu_autoconfirm_armies">Autoconfirm armies</string>
    <string name="menu_move_army_here">Order army to move here…</string>
    <string name="menu_move_me_here">Move me here</string>
    <string name="menu_improve_defense">Improve defense</string>
    <string name="menu_organize_ball">Organize a ball</string>
    <string name="menu_organize_hunt">Organize a hunt</string>
    <string name="menu_organize_festival">Organize a festival</string>
    <string name="menu_organize_religious_festival">Organize a religious festival</string>
    <string name="menu_list_actors">List actors in land</string>
    <string name="nevermind">Close</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_send_order">Send this order?</string>
    <string name="method_messenger">Messenger</string>
    <string name="method_dove">Dove</string>
    <string name="army_item_format">Army %1$s (%2$s)</string>
    <string name="app_name">mygame</string>
    <string name="end_a_turn">End a turn</string>
    <string name="skip_several_turns">Skip several turns</string>
    <string name="return_to_main_menu">Return to main menu</string>
    <string name="join_the_ball">Join the ball</string>
    <string name="join_the_festival">Join the festival</string>
    <string name="join_the_religious_festival">Join the religious festival</string>
    <string name="join_the_hunt">Join the hunt</string>
    <string name="go_to_the_duel">Go to the duel</string>
    <string name="go_to_the_map">Go to the map</string>
    <string name="back">Back</string>
    <string name="start_the_duel">Start the duel</string>
    <string name="try_to_avoid_duel">Try to avoid duel</string>
    <string name="accept_audience">Accept audience</string>
    <string name="return_to_the_home">Return to the home</string>
    <string name="invite_for_a_dance">Invite for a dance</string>
    <string name="end_audience">End audience</string>
    <string name="start_the_game">Start the game</string>
    <string name="exit">Exit</string>
    <string name="load_the_game">Load the game</string>
    <string name="speak_to_barmen">Speak to barmen</string>
    <string name="provide_verdict">Provide verdict</string>
    <string name="get_verdict">Get verdict</string>
    <string name="end_a_meal">End a meal</string>
    <string name="select_a_meal">Select a meal</string>
    <string name="menu">menu</string>
    <string name="end_turn">End turn</string>
    <string name="audience">Audience</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="accept_arrest">Accept arrest</string>
    <string name="flee">Flee</string>
    <string name="listen_to_witnesses">Listen to witnesses</string>
    <string name="give_verdict">Give verdict</string>
    <string name="you_lost">You lost</string>
    <string name="start_meal">Start meal</string>
</resources>