<?xml version="1.0" encoding="utf-8"?>
    <!-- res/layout/activity_main.xml -->
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/root"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/tent"
android:orientation="horizontal">
<!--view for battle-->
<ImageButton
    android:id="@+id/returnToMainMenuButton3"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:scaleType="centerInside"
    android:contentDescription="@string/return_to_main_menu"
    android:background="@android:color/transparent"
    app:srcCompat="@drawable/back_to_main_menu"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp" />

<ImageButton
    android:id="@+id/endATurnButton3"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:scaleType="centerInside"
    android:contentDescription="@string/end_a_turn"
    android:background="@android:color/transparent"
    app:srcCompat="@drawable/next_turn"
    app:layout_constraintTop_toBottomOf="@+id/returnToMainMenuButton3"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="16dp"/>

<ImageButton
    android:id="@+id/skipSeveralTurnsButton3"
    android:layout_width="48dp"
    android:layout_height="48dp"
    android:scaleType="centerInside"
    android:contentDescription="@string/skip_several_turns"
    android:background="@android:color/transparent"
    app:srcCompat="@drawable/skip_few_turns"
    app:layout_constraintTop_toBottomOf="@+id/endATurnButton3"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>